# serializer version: 1
# name: test_acme_client_create_client_jws_errors[json_error0-True]
  '''
  [DEBUG] hass_nabucasa.api: Sending POST request to servicehandlers.example.com/instance/register
  [DEBUG] hass_nabucasa.api: Response for post from servicehandlers.example.com/instance/register (200) 
  [DEBUG] hass_nabucasa.remote: Retrieved instance data: {'domain': 'test.dui.nabu.casa', 'email': 'test@nabucasa.inc', 'server': 'rest-remote.nabu.casa'}
  [DEBUG] hass_nabucasa.remote: Certificate status: loading
  [DEBUG] hass_nabucasa.remote: Certificate status: validating
  [DEBUG] hass_nabucasa.remote: Certificate status: expired
  [DEBUG] hass_nabucasa.remote: Certificate status: initial_generating
  [DEBUG] hass_nabucasa.remote: Certificate status: initial_cert_error
  '''
# ---
# name: test_acme_client_create_client_jws_errors[json_error1-True]
  '''
  [DEBUG] hass_nabucasa.api: Sending POST request to servicehandlers.example.com/instance/register
  [DEBUG] hass_nabucasa.api: Response for post from servicehandlers.example.com/instance/register (200) 
  [DEBUG] hass_nabucasa.remote: Retrieved instance data: {'domain': 'test.dui.nabu.casa', 'email': 'test@nabucasa.inc', 'server': 'rest-remote.nabu.casa'}
  [DEBUG] hass_nabucasa.remote: Certificate status: loading
  [DEBUG] hass_nabucasa.remote: Certificate status: validating
  [DEBUG] hass_nabucasa.remote: Certificate status: expired
  [DEBUG] hass_nabucasa.remote: Certificate status: initial_generating
  [DEBUG] hass_nabucasa.remote: Certificate status: initial_cert_error
  '''
# ---
# name: test_acme_client_create_client_jws_errors[json_error2-True]
  '''
  [DEBUG] hass_nabucasa.api: Sending POST request to servicehandlers.example.com/instance/register
  [DEBUG] hass_nabucasa.api: Response for post from servicehandlers.example.com/instance/register (200) 
  [DEBUG] hass_nabucasa.remote: Retrieved instance data: {'domain': 'test.dui.nabu.casa', 'email': 'test@nabucasa.inc', 'server': 'rest-remote.nabu.casa'}
  [DEBUG] hass_nabucasa.remote: Certificate status: loading
  [DEBUG] hass_nabucasa.remote: Certificate status: validating
  [DEBUG] hass_nabucasa.remote: Certificate status: expired
  [DEBUG] hass_nabucasa.remote: Certificate status: initial_generating
  [DEBUG] hass_nabucasa.remote: Certificate status: initial_cert_error
  '''
# ---
# name: test_acme_client_create_client_jws_errors[json_error3-False]
  '''
  [DEBUG] hass_nabucasa.api: Sending POST request to servicehandlers.example.com/instance/register
  [DEBUG] hass_nabucasa.api: Response for post from servicehandlers.example.com/instance/register (200) 
  [DEBUG] hass_nabucasa.remote: Retrieved instance data: {'domain': 'test.dui.nabu.casa', 'email': 'test@nabucasa.inc', 'server': 'rest-remote.nabu.casa'}
  [DEBUG] hass_nabucasa.remote: Certificate status: loading
  [DEBUG] hass_nabucasa.remote: Certificate status: validating
  [DEBUG] hass_nabucasa.remote: Certificate status: expired
  [DEBUG] hass_nabucasa.remote: Certificate status: initial_generating
  [WARNING] hass_nabucasa.remote: Failed to issue certificate for test.dui.nabu.casa: Can't connect to ACME server: urn:ietf:params:acme:error:malformed :: The request message was malformed :: Some other malformed reason
  [DEBUG] hass_nabucasa.remote: Certificate status: initial_cert_error
  '''
# ---
# name: test_acme_client_create_client_jws_errors[json_error4-False]
  '''
  [DEBUG] hass_nabucasa.api: Sending POST request to servicehandlers.example.com/instance/register
  [DEBUG] hass_nabucasa.api: Response for post from servicehandlers.example.com/instance/register (200) 
  [DEBUG] hass_nabucasa.remote: Retrieved instance data: {'domain': 'test.dui.nabu.casa', 'email': 'test@nabucasa.inc', 'server': 'rest-remote.nabu.casa'}
  [DEBUG] hass_nabucasa.remote: Certificate status: loading
  [DEBUG] hass_nabucasa.remote: Certificate status: validating
  [DEBUG] hass_nabucasa.remote: Certificate status: expired
  [DEBUG] hass_nabucasa.remote: Certificate status: initial_generating
  [WARNING] hass_nabucasa.remote: Failed to issue certificate for test.dui.nabu.casa: Can't connect to ACME server: about:blank :: Boom
  [DEBUG] hass_nabucasa.remote: Certificate status: initial_cert_error
  '''
# ---
# name: test_acme_client_new_order_errors[json_error0-True]
  '''
  [DEBUG] hass_nabucasa.api: Sending POST request to servicehandlers.example.com/instance/register
  [DEBUG] hass_nabucasa.api: Response for post from servicehandlers.example.com/instance/register (200) 
  [DEBUG] hass_nabucasa.remote: Retrieved instance data: {'domain': 'test.dui.nabu.casa', 'email': 'test@nabucasa.inc', 'server': 'rest-remote.nabu.casa'}
  [DEBUG] hass_nabucasa.remote: Certificate status: loading
  [DEBUG] hass_nabucasa.remote: Certificate status: validating
  [DEBUG] hass_nabucasa.remote: Certificate status: expired
  [DEBUG] hass_nabucasa.remote: Certificate status: initial_generating
  [INFO] hass_nabucasa.acme: Initialize challenge for a new ACME certificate
  [DEBUG] hass_nabucasa.remote: Certificate status: initial_cert_error
  '''
# ---
# name: test_acme_client_new_order_errors[json_error1-True]
  '''
  [DEBUG] hass_nabucasa.api: Sending POST request to servicehandlers.example.com/instance/register
  [DEBUG] hass_nabucasa.api: Response for post from servicehandlers.example.com/instance/register (200) 
  [DEBUG] hass_nabucasa.remote: Retrieved instance data: {'domain': 'test.dui.nabu.casa', 'email': 'test@nabucasa.inc', 'server': 'rest-remote.nabu.casa'}
  [DEBUG] hass_nabucasa.remote: Certificate status: loading
  [DEBUG] hass_nabucasa.remote: Certificate status: validating
  [DEBUG] hass_nabucasa.remote: Certificate status: expired
  [DEBUG] hass_nabucasa.remote: Certificate status: initial_generating
  [INFO] hass_nabucasa.acme: Initialize challenge for a new ACME certificate
  [DEBUG] hass_nabucasa.remote: Certificate status: initial_cert_error
  '''
# ---
# name: test_acme_client_new_order_errors[json_error2-True]
  '''
  [DEBUG] hass_nabucasa.api: Sending POST request to servicehandlers.example.com/instance/register
  [DEBUG] hass_nabucasa.api: Response for post from servicehandlers.example.com/instance/register (200) 
  [DEBUG] hass_nabucasa.remote: Retrieved instance data: {'domain': 'test.dui.nabu.casa', 'email': 'test@nabucasa.inc', 'server': 'rest-remote.nabu.casa'}
  [DEBUG] hass_nabucasa.remote: Certificate status: loading
  [DEBUG] hass_nabucasa.remote: Certificate status: validating
  [DEBUG] hass_nabucasa.remote: Certificate status: expired
  [DEBUG] hass_nabucasa.remote: Certificate status: initial_generating
  [INFO] hass_nabucasa.acme: Initialize challenge for a new ACME certificate
  [DEBUG] hass_nabucasa.remote: Certificate status: initial_cert_error
  '''
# ---
# name: test_acme_client_new_order_errors[json_error3-False]
  '''
  [DEBUG] hass_nabucasa.api: Sending POST request to servicehandlers.example.com/instance/register
  [DEBUG] hass_nabucasa.api: Response for post from servicehandlers.example.com/instance/register (200) 
  [DEBUG] hass_nabucasa.remote: Retrieved instance data: {'domain': 'test.dui.nabu.casa', 'email': 'test@nabucasa.inc', 'server': 'rest-remote.nabu.casa'}
  [DEBUG] hass_nabucasa.remote: Certificate status: loading
  [DEBUG] hass_nabucasa.remote: Certificate status: validating
  [DEBUG] hass_nabucasa.remote: Certificate status: expired
  [DEBUG] hass_nabucasa.remote: Certificate status: initial_generating
  [INFO] hass_nabucasa.acme: Initialize challenge for a new ACME certificate
  [WARNING] hass_nabucasa.remote: Failed to issue certificate for test.dui.nabu.casa: Can't order a new ACME challenge: urn:ietf:params:acme:error:malformed :: The request message was malformed :: Some other malformed reason
  [DEBUG] hass_nabucasa.remote: Certificate status: initial_cert_error
  '''
# ---
# name: test_acme_client_new_order_errors[json_error4-False]
  '''
  [DEBUG] hass_nabucasa.api: Sending POST request to servicehandlers.example.com/instance/register
  [DEBUG] hass_nabucasa.api: Response for post from servicehandlers.example.com/instance/register (200) 
  [DEBUG] hass_nabucasa.remote: Retrieved instance data: {'domain': 'test.dui.nabu.casa', 'email': 'test@nabucasa.inc', 'server': 'rest-remote.nabu.casa'}
  [DEBUG] hass_nabucasa.remote: Certificate status: loading
  [DEBUG] hass_nabucasa.remote: Certificate status: validating
  [DEBUG] hass_nabucasa.remote: Certificate status: expired
  [DEBUG] hass_nabucasa.remote: Certificate status: initial_generating
  [INFO] hass_nabucasa.acme: Initialize challenge for a new ACME certificate
  [WARNING] hass_nabucasa.remote: Failed to issue certificate for test.dui.nabu.casa: Can't order a new ACME challenge: about:blank :: Boom
  [DEBUG] hass_nabucasa.remote: Certificate status: initial_cert_error
  '''
# ---
# name: test_context_error_handling[Boom-False]
  '''
  [DEBUG] hass_nabucasa.api: Sending POST request to servicehandlers.example.com/instance/register
  [DEBUG] hass_nabucasa.api: Response for post from servicehandlers.example.com/instance/register (200) 
  [DEBUG] hass_nabucasa.remote: Retrieved instance data: {'domain': 'test.dui.nabu.casa', 'email': 'test@nabucasa.inc', 'server': 'rest-remote.nabu.casa'}
  [DEBUG] hass_nabucasa.remote: Certificate status: loading
  [DEBUG] hass_nabucasa.remote: Certificate status: validating
  [DEBUG] hass_nabucasa.remote: Certificate status: initial_loaded
  [DEBUG] hass_nabucasa.remote: Certificate status: ready
  [DEBUG] hass_nabucasa.remote: Certificate status: ssl_context_error
  '''
# ---
# name: test_context_error_handling[KEY_VALUES_MISMATCH-True]
  '''
  [DEBUG] hass_nabucasa.api: Sending POST request to servicehandlers.example.com/instance/register
  [DEBUG] hass_nabucasa.api: Response for post from servicehandlers.example.com/instance/register (200) 
  [DEBUG] hass_nabucasa.remote: Retrieved instance data: {'domain': 'test.dui.nabu.casa', 'email': 'test@nabucasa.inc', 'server': 'rest-remote.nabu.casa'}
  [DEBUG] hass_nabucasa.remote: Certificate status: loading
  [DEBUG] hass_nabucasa.remote: Certificate status: validating
  [DEBUG] hass_nabucasa.remote: Certificate status: initial_loaded
  [DEBUG] hass_nabucasa.remote: Certificate status: ready
  [DEBUG] hass_nabucasa.remote: Certificate status: ssl_context_error
  '''
# ---
# name: test_load_connect_forbidden
  '''
  [DEBUG] hass_nabucasa.api: Sending POST request to servicehandlers.example.com/instance/register
  [DEBUG] hass_nabucasa.api: Response for post from servicehandlers.example.com/instance/register (200) 
  [DEBUG] hass_nabucasa.remote: Retrieved instance data: {'domain': 'test.dui.nabu.casa', 'email': 'test@nabucasa.inc', 'server': 'rest-remote.nabu.casa'}
  [DEBUG] hass_nabucasa.remote: Certificate status: loading
  [DEBUG] hass_nabucasa.remote: Certificate status: validating
  [DEBUG] hass_nabucasa.remote: Certificate status: initial_loaded
  [DEBUG] hass_nabucasa.remote: Certificate status: ready
  [DEBUG] hass_nabucasa.remote: Initializing SniTun
  [DEBUG] hass_nabucasa.remote: Starting SniTun
  [DEBUG] hass_nabucasa.remote: Connecting remote backend: True
  [DEBUG] hass_nabucasa.remote: Refresh snitun token
  [DEBUG] hass_nabucasa.api: Sending POST request to servicehandlers.example.com/instance/snitun_token
  [DEBUG] hass_nabucasa.api: Response for post from servicehandlers.example.com/instance/snitun_token (403) lorem_ipsum
  [ERROR] hass_nabucasa.remote: Remote connection is not allowed lorem_ipsum
  '''
# ---
# name: test_load_connect_insecure
  '''
  [DEBUG] hass_nabucasa.api: Sending POST request to servicehandlers.example.com/instance/register
  [DEBUG] hass_nabucasa.api: Response for post from servicehandlers.example.com/instance/register (200) 
  [DEBUG] hass_nabucasa.remote: Retrieved instance data: {'domain': 'test.dui.nabu.casa', 'email': 'test@nabucasa.inc', 'server': 'rest-remote.nabu.casa'}
  [DEBUG] hass_nabucasa.remote: Certificate status: loading
  [DEBUG] hass_nabucasa.remote: Certificate status: validating
  [DEBUG] hass_nabucasa.remote: Certificate status: initial_loaded
  [DEBUG] hass_nabucasa.remote: Certificate status: ready
  [DEBUG] hass_nabucasa.remote: Initializing SniTun
  [DEBUG] hass_nabucasa.remote: Starting SniTun
  [DEBUG] hass_nabucasa.remote: Connecting remote backend: True
  [DEBUG] hass_nabucasa.remote: Refresh snitun token
  [DEBUG] hass_nabucasa.api: Sending POST request to servicehandlers.example.com/instance/snitun_token
  [DEBUG] hass_nabucasa.api: Response for post from servicehandlers.example.com/instance/snitun_token (409) 
  '''
# ---
# name: test_recreating_old_certificate_with_bad_dns_config
  list([
    dict({
      'identifier': 'reset_bad_custom_domain_configuration_1538740800',
      'placeholders': dict({
        'custom_domains': 'example.com',
      }),
      'severity': 'error',
      'translation_key': 'reset_bad_custom_domain_configuration',
    }),
  ])
# ---
# name: test_regeneration_without_warning_for_good_dns_config
  list([
  ])
# ---
# name: test_warn_about_bad_dns_config_for_old_certificate[exception0]
  list([
    dict({
      'identifier': 'warn_bad_custom_domain_configuration_1539345600',
      'placeholders': dict({
        'custom_domains': 'example.com',
      }),
      'severity': 'warning',
      'translation_key': 'warn_bad_custom_domain_configuration',
    }),
  ])
# ---
# name: test_warn_about_bad_dns_config_for_old_certificate[exception1]
  list([
    dict({
      'identifier': 'warn_bad_custom_domain_configuration_1539345600',
      'placeholders': dict({
        'custom_domains': 'example.com',
      }),
      'severity': 'warning',
      'translation_key': 'warn_bad_custom_domain_configuration',
    }),
  ])
# ---
# name: test_warn_about_bad_dns_config_for_old_certificate[exception2]
  list([
    dict({
      'identifier': 'warn_bad_custom_domain_configuration_1539345600',
      'placeholders': dict({
        'custom_domains': 'example.com',
      }),
      'severity': 'warning',
      'translation_key': 'warn_bad_custom_domain_configuration',
    }),
  ])
# ---
